<resources>
    <string name="app_name">AppConductor</string>
    <string name="scan_cod_fac">Por favor escanee el código en la Factura</string>
    <string name="factura_nro">FACTURA:</string>
    <string name="valor_factura">VALOR:</string>
    <string name="cliente">CLIENTE:</string>
    <string name="valor_pagado">VLR PAGADO:</string>
    <string name="saldo_actual_factura">SALDO:</string>
    <string name="motivo_rechazo">MOTIVO RECHAZO:</string>
    <string name="total_tabla">Total:</string>
    <string name="verificar_pago_factura">Verificar Pago Factura</string>
    <string name="facturas_pago_en_linea_en_mi_ruta">Facturas pago en linea en mi ruta</string>
    <string name="title_activity_scanner_ruta">ScannerRutaActivity</string>
    <string name="texto_cambio_clave">Digite su nueva contraseña</string>
    <string name="texto_registrarse">Digite una contraseña de acceso</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="pago_en_proceso">PAGO EN PROCESO</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_cc">Nro Documento</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="welcome">"Ingreso Exitoso!"</string>
    <string name="invalid_username">Por favor digite un número de cedula válido</string>
    <string name="login_failed">"Solicitar Activación en el Sistema"</string>

    <string name="option_cancelar">Cancelar</string>
    <string name="option_scanear">Escanear</string>
    <string name="option_digitar">Digitar</string>
    <string name="option_volver_escarner">Volver a Escaner</string>
    <string name="option_Consultar">Consultar</string>
    <string name="title_Consulta">Consulta</string>
    <string name="digite_nro_factura">Digite el numero de factura</string>
    <string name="digite_nro_contrato">Digite el numero de contrato</string>
    <string name="cambio_contrasena">Olvidé mi contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="verificar">Verificar</string>

    <string name="cod_verificacion">Código de verificación</string>
    <string name="contrasena">Contraseña</string>
    <string name="repita_contrasena">Repetir contraseña</string>

    <string name="verificar_factura">Verificar factura</string>
    <string name="error_internet">Error de comunicación, inténtelo mas tarde</string>
    <!-- URL productivo
    <string name="url_api">http://ap2021.macpollo.com/apiv1/api/</string> -->
    <!-- URL Calidad -->
    <string name="url_api">http://ap2021.macpollo.com/apiprueba/api/</string>
</resources>